# shannon-charge-safety

./: .gitignore  LICENSE  README.md  pyproject.toml
src/shannon_charge_safety/: __init__.py  cli.py  core.py
tests/: test_core.py
